force-app/main/default/objects/Migration_src__c/Migration_src__c.object-meta.xml
<CustomObject>
    <description>법인통합 및 조직개편 작업을 위해 서안으로부터 받은 엑셀을 보관하는 테이블</description>
    <label>Migration_src</label>
    <nameField>
        <label>Migration_src Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration_src</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>