force-app/main/default/objects/Migration_src__c/fields/AS_IS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>AS_IS_Company_Code__c</fullName>
    <label>AS-IS Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>