force-app/main/default/objects/Migration_src__c/fields/Biz_Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Biz_Attribute_Code__c</fullName>
    <label>Biz Attribute Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>