force-app/main/default/objects/Migration_src__c/fields/BO_Code__c.field-meta.xml
<CustomField>
    <fullName>BO_Code__c</fullName>
    <label>BO Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>