force-app/main/default/objects/Migration_src__c/fields/BO_number__c.field-meta.xml
<CustomField>
    <fullName>BO_number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BO number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Migration_src</relationshipLabel>
    <relationshipName>Migration_src</relationshipName>
    <type>Lookup</type>
</CustomField>