force-app/main/default/objects/Migration_src__c/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <label>service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>