force-app/main/default/objects/Migration_src__c/fields/solution__c.field-meta.xml
<CustomField>
    <fullName>solution__c</fullName>
    <label>solution</label>
    <length>20</length>
    <type>Text</type>
</CustomField>