force-app/main/default/objects/Migration_src__c/fields/TO_BE_Primary_Sales_Cctr__c.field-meta.xml
<CustomField>
    <fullName>TO_BE_Primary_Sales_Cctr__c</fullName>
    <label>TO-BE Primary Sales Cctr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>