force-app/main/default/objects/Migration_src__c/fields/TO_BE_Project__c.field-meta.xml
<CustomField>
    <fullName>TO_BE_Project__c</fullName>
    <label>TO-BE Project</label>
    <length>20</length>
    <type>Text</type>
</CustomField>