force-app/main/default/objects/Migration_src__c/fields/TO_BE_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>TO_BE_Project_Code__c</fullName>
    <label>TO-BE Project Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>