force-app/main/default/objects/Migration_src__c/fields/TO_BE_WBS__c.field-meta.xml
<CustomField>
    <fullName>TO_BE_WBS__c</fullName>
    <label>TO-BE WBS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>