force-app/main/default/objects/Migration_src__c/fields/WBS_Description__c.field-meta.xml
<CustomField>
    <fullName>WBS_Description__c</fullName>
    <label>WBS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>